--- a/src/style.css
+++ b/src/style.css
@@ -1,162 +1,212 @@
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Mukta:wght@200;300;400;500;600;700;800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
-h1, h2, h3, h5 {
-	font-family: "Bricolage Grotesque", sans-serif;
+h1{
+	line-height: 53px;
+	letter-spacing: -1px;
+}
+	
+h1 .title{
+	letter-spacing: 1.2px;
 }
 
 body {
-	font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+	font-family: "Roboto", sans-serif;
 	color: #45426E;
+	overflow-x: hidden;
 }
+
+.font-Bricolage-Grotesque{
+	font-family: "Bricolage Grotesque", sans-serif;
+}
+.font-mukta{
+	font-family: "Mukta", sans-serif;
+}
+
+
+.font-rubik{
+	font-family: "Rubik", sans-serif;
+}
+body.menu-open {
+    overflow: hidden;
+}
+
+
+header {
+    position: relative;
+    z-index: 1;
+}
+
+
+.nav__bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.nav__menu__btn {
+    font-size: 30px;
+    cursor: pointer;
+}
+
+
+.nav-link {
+    position: relative;
+    transition: all 0.3s;
+  }
+
+
+
+
+  
+  .nav-link.active{
+	color: #DD3142;
+  }
+  
+  .tel{
+	letter-spacing: -1.5px;
+  }
+
+  .nav-link.active::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #DD3142;
+    transform: translateY(3px);
+  }
+
 
 .container {
-	max-width: 1180px;
-	margin: auto;
-	padding-left: 15px;
-	padding-right: 15px;
-}
-
-.h2 {
-	font-size: 60px;
-	line-height: 1;
-	font-weight: 700;
-	letter-spacing: -1px;
-	color: #17134a;
-}
-
-.h3 {
-	font-size: 50px;
-	line-height: 1;
-	font-weight: 700;
-	letter-spacing: -0.5px;
-	color: #17134a;
-}
-
-.h5 {
-	font-size: 24px;
-	line-height: 26.4px;
-	font-weight: 700;
-	color: #17134a;
-}
-
-.h6 {
-	font-size: 20px;
-	line-height: 1.4;
-	font-weight: 600;
-	color: #17134a;
-}
-
-
-.hero-btns {
-    text-align: center;
-    background: center / contain no-repeat url('https://cdn.dorik.com/5e373b6c43a72a001f56dbf6/61a1f4035bfd7b0011fb92f9/images/button-bg_wqfy1ggx.svg');
-}
-
-.hero-btns a svg {
-    width: 14px;
-    height: 14px;
-}
-
-
-
-.btn {
-	display: flex;
-	align-items: center;
-	gap: 7px;
-	border-radius: 5px;
-	background-color: #3a30ba;
-	padding-inline: 32px;
-	padding-block: 16px;
-	font-size: 20px;
-	line-height: 1.5;
-	font-weight: 500;
-	color: #ffffff;
-	transition-duration: 300ms;
-}
-
-@media (hover: hover) {
-	.btn:hover {
-		background-color: #12126e;
-	}
-}
-
-
-.btns {
-	display: flex;
-	align-items: center;
-	gap: 7px;
-	border-radius: 5px;
-	background-color: #3a30ba;
-	padding-inline: 32px;
-	padding-block: 16px;
-	font-size: 16px;
-	line-height: 1.5;
-	font-weight: 500;
-	color: #ffffff;
-	transition-duration: 300ms;
-}
-
-@media (hover: hover) {
-	.btns:hover {
-		background-color: #12126e;
-	}
+	
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
 
 
 
-.footer-bg {
-	background-image: url('https://cdn.dorik.com/5e373b6c43a72a001f56dbf6/61a1f4035bfd7b0011fb92f9/images/footer-bg-2_71chjwos-1_iyenu6o2.svg');
-	background-size: contain;
-	background-position: top;
-	background-repeat: no-repeat;
+
+#testimonials {
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
 }
 
-a.footer-bt button {
-	padding: 0.5rem 0.75rem;
-	display: inline;
-	background: #2b2b2b;
-	width: 250px;
-	border-radius: 0.5rem;
-	border: 1px solid #000000;
-	color: #fff;
-	font-weight: 600;
-	position: relative;
-	padding-left: 35px;
-	padding-right: 35px;
-	cursor: pointer;
-}
+.slick-dots {
+	bottom: -24px;
+	display: flex !important;
+	justify-content: center;
+	gap: 4px;
+  }
+  
 
-a.footer-bt button:before {
-	position: absolute;
-	left: 12px;
-	top: 12px;
-	width: 15px;
-	height: 15px;
-	content: "";
-	background: #33b17e;
+  .slick-dots li button {
+	font-size: 0; 
+	width: 6px;
+	height: 6px;
+	background-color: #D9D9D9;
 	border-radius: 50%;
+	border: none;
+	display: inline-block;
+	padding: 0;
+  }
+  
+  .slick-dots li.slick-active button {
+	background-color:#DD3142;
+  }
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (min-width: 768px) {
+
+	.nav__menu__btn {
+        display: none;
+    }
 }
 
-.footer-bt button:hover {
-	background-color: #424242;
-}
 
-.footer-menu li a {
-	line-height: 26px;
-	color: #A2A1B7;
-}
 
-.footer-menu li a:hover {
-	color: white;
-}
+@media (width < 768px) {
+    
 
-.footer-btns {
-	text-align: center;
-	background: center / contain no-repeat url('https://cdn.dorik.com/5e373b6c43a72a001f56dbf6/61a1f4035bfd7b0011fb92f9/images/button-bg_wqfy1ggx.svg');
-}
+    .btn {
+        display: none;
+    }
 
-.footer-btns a svg {
-	width: 14px;
-	height: 14px;
+    
+
+    header {
+        padding-top: 0;
+    }
+
+    .nav__bar {
+        padding-left: 0;
+        padding-right: 0;
+        width: 100%;
+    }
+
+    .nav__links {
+		list-style: none;
+		position: fixed;
+		top: -100vh;
+		left: 0;
+		height: auto;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: start;
+		padding: 2rem 1rem;
+		gap: 2rem;
+		font-size: 1.2rem;
+		transform: translateY(-100%);
+		transition: transform 0.5s ease-in-out;
+		z-index: 9999;
+		opacity: 0;
+		visibility: hidden;
+		background: #DD3142;
+	}
+	
+	.nav__links.open {
+		
+		transform: translateY(0);
+		top: 60px;
+		opacity: 1;
+		visibility: visible;
+	}
+	
+	.nav-link.active{
+		color: black;
+	  }
+	  .nav-link.active::after {
+		
+		background-color: white;
+	  }
+    .nav__links a {
+        position: relative;
+        padding-bottom: 8px;
+        transition: .3s;
+        color: white;
+    }
+
+    #custom-arrows button.slick-arrow {
+
+        bottom: -80px;;
+    }
+
 }
